# scm-prueba-tecnica-fullstack

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prueba-tecnica-seleccion.md  pyproject.toml  requirements.txt
app/: auth.py  database.py  filters.py  main.py  models.py
frontend/: Dockerfile  pnpm-lock.yaml
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: ItemsView.vue  LoginView.vue
tests/: conftest.py  test_search.py
